# this is an example test to see if maestro is working

appId: com.anonymous.AITextbookApp
---
- launchApp
- tapOn: "Enter your username"
- inputText: "testmobile"
- tapOn: "Enter your password"
- inputText: "password"
- tapOn: "Log In"
- assertVisible: "You are successfully logged in."
- tapOn: "Log out"